--- a/FL12_HW1/homework/index.html
+++ b/FL12_HW1/homework/index.html
@@ -26,40 +26,44 @@
               <a href="#registration"><strong>Registration</strong></a>
             </nav>
             <hr />
-            <p id="home">
-              Lorem ipsum dolor sit amet,
-              <a href="#">test link</a>
-              adipiscing elit. Nullam dignissim convallis est. Quisque aliquam.
-              <em>This is emphasized.</em>
-              Donec faucibus. Nunc iaculis suscipit dui. 4<sup>4</sup> = 256.
-              Water is H<sub>3</sub>PO<sub>4</sub>. Nam sit amet sem. Aliquam
-              libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl.
-              <cite>Time Magazine</cite>
-              (That’s a citation).
-              <u>Underline.</u>
-              Maecenas ornare tortor. Donec sed tellus eget sapien fringilla
-              nonummy. Mauris a ante. Suspendisse quam sem, consequat at,
-              commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis
-              tellus.
-              <strong>I am strong.</strong>
-            </p>
-            <p>
-              Watch out for the abbreviations!
-              <abbr title="Hyper Text Markup Language">HTML</abbr>
-              and
-              <abbr title="Cascading Style Sheets">CSS</abbr>
-              are our tools.
-              <abbr title="JavaScript">JS</abbr>
-              is a dynamically typed language. auris a ante. Suspendisse quam
-              sem, consequat at, commodo vitae, feugiat in, nunc. Morbi
-              imperdiet augue quis tellus. Praesent mattis, massa quis luctus
-              fermentum. To copy a file type
-              <code>COPY</code>
-              <var>filename.</var>
-              <del>The meeting began at 7pm</del>
-              <ins>Let’s make that 6.</ins>
-              This <s>text</s> has been struck.
-            </p>
+            <div id="home">
+              <p>
+                Lorem ipsum dolor sit amet,
+                <a href="#">test link</a>
+                adipiscing elit. Nullam dignissim convallis est. Quisque
+                aliquam.
+                <em>This is emphasized.</em>
+                Donec faucibus. Nunc iaculis suscipit dui. 4<sup>4</sup> = 256.
+                Water is H<sub>3</sub>PO<sub>4</sub>. Nam sit amet sem. Aliquam
+                libero nisi, imperdiet at, tincidunt nec, gravida vehicula,
+                nisl.
+                <cite>Time Magazine</cite>
+                (That’s a citation).
+                <u>Underline.</u>
+                Maecenas ornare tortor. Donec sed tellus eget sapien fringilla
+                nonummy. Mauris a ante. Suspendisse quam sem, consequat at,
+                commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis
+                tellus.
+                <strong>I am strong.</strong>
+              </p>
+              <p>
+                Watch out for the abbreviations!
+                <abbr title="Hyper Text Markup Language">HTML</abbr>
+                and
+                <abbr title="Cascading Style Sheets">CSS</abbr>
+                are our tools.
+                <abbr title="JavaScript">JS</abbr>
+                is a dynamically typed language. auris a ante. Suspendisse quam
+                sem, consequat at, commodo vitae, feugiat in, nunc. Morbi
+                imperdiet augue quis tellus. Praesent mattis, massa quis luctus
+                fermentum. To copy a file type
+                <code>COPY</code>
+                <var>filename.</var>
+                <del>The meeting began at 7pm</del>
+                <ins>Let’s make that 6.</ins>
+                This <s>text</s> has been struck.
+              </p>
+            </div>
             <hr />
             <section id="headings">
               <p>
@@ -199,20 +203,22 @@
               </blockquote>
             </section>
             <hr />
-            <form id="registration">
-              Username:
-              <input type="text" name="username" />
-              <br />
-              Email:
-              <input type="email" name="email" />
-              <br />
-              Password:
-              <input type="password" name="password" />
-              <br />
-              <textarea cols="23" rows="4"></textarea>
-              <br />
-              <button type="submit">Submit</button>
-            </form>
+            <div id="registration">
+              <form>
+                Username:
+                <input type="text" name="username" />
+                <br />
+                Email:
+                <input type="email" name="email" />
+                <br />
+                Password:
+                <input type="password" name="password" />
+                <br />
+                <textarea cols="23" rows="4"></textarea>
+                <br />
+                <button type="submit">Submit</button>
+              </form>
+            </div>
             <footer>
               &copy; Copyright Epam Systems
             </footer>
